<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moszben.alive.Signup">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fname_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver"
                android:layout_below="@id/name_wrap">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/fname"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/suser_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver"
                android:layout_below="@id/fname_wrap">

            <EditText
                android:id="@+id/suser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/user" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/spass_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver"
                android:layout_below="@id/suser_wrap">

            <EditText
                android:id="@+id/spass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/pass"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cpass_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver"
                android:layout_below="@id/spass_wrap">

            <EditText
                android:id="@+id/cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/confirmpass"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/slogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onLogin"
                android:text="@string/login"
                android:layout_below="@id/cpass_wrap"
                android:layout_marginTop="@dimen/marg_ver"
                android:layout_marginBottom="@dimen/marg_ver"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
