<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moszben.alive.LoginAct">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="46dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver">

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/marg_ver"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_wrap"
                android:layout_marginTop="@dimen/marg_ver"
                android:paddingTop="@dimen/marg_ver">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/marg_ver"
                    android:ems="10"
                    android:hint="@string/pass"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass_wrap"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:onClick="onLogin"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="onSign"
                android:text="@string/signup" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
